Issue #22747: Workaround for systems without langinfo.h.